--- a/webpage/about.html
+++ b/webpage/about.html
@@ -11,17 +11,17 @@
 
 </head>
 <body>
-    <header>
-        <h1>Plant Love</h1>
-        <p>Insert Quote Here</p>
-
-    </header>
-
-
-
+    <nav>
+        <a href="#">HOME</a>
+        <a href="#">ABOUT</a>
+        <a href="#">REGISTER</a>
+        <a href="#">SIGN IN</a>
+    </nav>
 
 
-
+    <footer>
+        <p>Copyright 2020 Plant Love</p>
+    </footer>
 
 </body>
 </html>
