--- a/webpage/about.html
+++ b/webpage/about.html
@@ -6,7 +6,7 @@
     
     <title>Document</title>
 
-    <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="stylesheet" type="text/css" href="about.css">
 
 
 </head>
