starting on CSS

--- a/webpage/about.html
+++ b/webpage/about.html
@@ -17,7 +17,31 @@
         <a href="#">REGISTER</a>
         <a href="#">SIGN IN</a>
     </nav>
+    
+    <header>
+        <h1>Plant2o</h1>
+        <p>Plant2o is an app that does things. Things that will help your plants receive water. I am currently waiting on exactly how those things will work. But for now, all I have to work with is creating this long filler paragraph. I could have used Lorem Ipsum but why not treat it like a diary?</p>
+        <p>Alright, I think this should be long enough to cover the area I may need for the app description.</p>
+        <p>Stay golden ponyboy.</p>
+    </header>
 
+    <section class="planOne">
+        <h2>Plan 1</h2>
+        <p>That is, assuming the app folk are chosing to include payment plans of some sort.</p>
+    </section>
+
+    <section class="buttonParentTwo">
+        <a href="#">I Choose This!</a>
+    </section>
+
+    <section class="planTwo">
+        <h2>Plan 2</h2>
+        <p>I'm not sure. I guess we'll have to see won't we? Hopefully I won't have to add them last minute.</p>
+    </section>
+
+    <section class="buttonParentThree">
+        <a href="#">I Choose This!</a>
+    </section>
 
     <footer>
         <p>Copyright 2020 Plant Love</p>
