--- a/webpage/index.html
+++ b/webpage/index.html
@@ -12,10 +12,14 @@
 </head>
 <body>
     <header>
-        <h1>Plant Love</h1>
+        <h1>Plant2o</h1>
+    </header>
+
+    <main>
+        <h2>PLANT LOVE</h2>
         <p>"To such an extent does nature delight and abound in variety that among her trees there is not one plant to be found which is exactly like another; and not only among the plants, but among the boughs, the leaves and the fruits, you will not find one which is exactly similar to another."</p>
         <p>Leonardo da Vinci</p>
-    </header>
+    </main>
 
     <nav>
         <a href="#">HOME</a>
