In the middle of css less for Main page

--- a/webpage/index.html
+++ b/webpage/index.html
@@ -6,27 +6,32 @@
     
     <title>Document</title>
 
-    <link rel="stylesheet" type="text/css" href="index.css">
-
+    <link rel="stylesheet" type="text/css" href="../css/index.css">
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Playfair+Display:wght@500&family=Spartan&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
 
 </head>
 <body>
-    <header>
-        <h1>Plant2o</h1>
-    </header>
+    <section class="TopOfPage">
+        <header>
+            <h1>PLANT PARENTHOOD</h1>
+        </header>
 
-    <main>
-        <h2>PLANT LOVE</h2>
-        <p>"To such an extent does nature delight and abound in variety that among her trees there is not one plant to be found which is exactly like another; and not only among the plants, but among the boughs, the leaves and the fruits, you will not find one which is exactly similar to another."</p>
-        <p>Leonardo da Vinci</p>
-    </main>
+        <nav>
+            <a href="#">HOME</a>
+            <a href="#">ABOUT</a>
+            <a href="#">REGISTER</a>
+            <a href="#">SIGN IN</a>
+        </nav>
+    </section>
 
-    <nav>
-        <a href="#">HOME</a>
-        <a href="#">ABOUT</a>
-        <a href="#">REGISTER</a>
-        <a href="#">SIGN IN</a>
-    </nav>
+    <section class="mainParent">
+        <main>
+            <h2>LOVE YOUR PLANTS</h2>
+            <p>"To such an extent does nature delight and abound in variety that among her trees there is not one plant to be found which is exactly like another; and not only among the plants, but among the boughs, the leaves and the fruits, you will not find one which is exactly similar to another."</p>
+            <p>Leonardo da Vinci</p>
+        </main>
+    </section>
 
     <section class="welcome">
         <h2>WELCOME PLANT LOVERS</h2>
