first half of page done

--- a/webpage/index.html
+++ b/webpage/index.html
@@ -8,13 +8,13 @@
 
     <link rel="stylesheet" type="text/css" href="../css/index.css">
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Playfair+Display:wght@500&family=Spartan&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
 
 </head>
 <body>
     <section class="TopOfPage">
         <header>
-            <h1>PLANT PARENTHOOD</h1>
+            <h1>PLANT2O</h1>
         </header>
 
         <nav>
@@ -25,13 +25,10 @@
         </nav>
     </section>
 
-    <section class="mainParent">
         <main>
             <h2>LOVE YOUR PLANTS</h2>
-            <p>"To such an extent does nature delight and abound in variety that among her trees there is not one plant to be found which is exactly like another; and not only among the plants, but among the boughs, the leaves and the fruits, you will not find one which is exactly similar to another."</p>
-            <p>Leonardo da Vinci</p>
+            <p>"To such an extent does nature delight and abound in variety that among her trees there is not one plant to be found which is exactly like another; and not only among the plants, but among the boughs, the leaves and the fruits, you will not find one which is exactly similar to another."<br> Leonardo da Vinci</p>
         </main>
-    </section>
 
     <section class="welcome">
         <h2>WELCOME PLANT LOVERS</h2>
