linked about and index page

--- a/webpage/about.html
+++ b/webpage/about.html
@@ -6,24 +6,23 @@
     
     <title>Document</title>
 
-    <link rel="stylesheet" type="text/css" href="about.css">
+    <link rel="stylesheet" type="text/css" href="../css/index.css">
 
 
 </head>
 <body>
-    <nav>
-        <a href="#">HOME</a>
-        <a href="#">ABOUT</a>
-        <a href="#">REGISTER</a>
-        <a href="#">SIGN IN</a>
-    </nav>
-    
-    <header>
-        <h1>Plant2o</h1>
-        <p>Plant2o is an app that does things. Things that will help your plants receive water. I am currently waiting on exactly how those things will work. But for now, all I have to work with is creating this long filler paragraph. I could have used Lorem Ipsum but why not treat it like a diary?</p>
-        <p>Alright, I think this should be long enough to cover the area I may need for the app description.</p>
-        <p>Stay golden ponyboy.</p>
-    </header>
+    <section class="TopOfPage">
+        <header>
+            <h1>PLANT2O</h1>
+        </header>
+
+        <nav>
+            <a href="index.html">HOME</a>
+            <a href="#">ABOUT</a>
+            <a href="#">REGISTER</a>
+            <a href="#">SIGN IN</a>
+        </nav>
+    </section>
 
     <section class="planOne">
         <h2>Plan 1</h2>
