--- a/webpage/index.html
+++ b/webpage/index.html
@@ -19,7 +19,7 @@
 
         <nav>
             <a href="#">HOME</a>
-            <a href="#">ABOUT</a>
+            <a href="about.html">ABOUT</a>
             <a href="#">REGISTER</a>
             <a href="#">SIGN IN</a>
         </nav>
