almost done with about page

--- a/webpage/about.html
+++ b/webpage/about.html
@@ -7,13 +7,14 @@
     <title>Document</title>
 
     <link rel="stylesheet" type="text/css" href="../css/index.css">
-
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Playfair+Display:wght@500&family=Spartan&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
 
 </head>
 <body>
     <section class="TopOfPage">
         <header>
-            <h1>PLANT2O</h1>
+            <h1>WET MY PLANTS</h1>
         </header>
 
         <nav>
@@ -24,8 +25,18 @@
         </nav>
     </section>
 
+    <section class="appSummary">
+        <h2>What is Plant2O?</h2>
+        <p>Plant2O is more than a clever play on H2O! It's an app that allows you to set reminders to water your plants! And this is necessary why? Think about it! How many times do you forget to water your plants? Do you have a hard time remembering when the last time you even watered your plant babies? Do you find yourself saying any of the classic Plant Parent phrases: "Didn't I just water you yesterday?" or "How often do I have to water this plant again?"<br>Plant2O takes care of those problems. By setting specific reminders for each plant, never again will you have to bend over backwards trying to remember those watering schedules!</p>
+        <h4>Take away the stress of gardening, enjoy only the fruits of Plant2O's labor!</h4>
+    </section>
+
+    <section class="succulents">
+        <img src="../photos/annie-spratt-ncQ2sguVlgo-unsplash.jpg">
+    </section>
+
     <section class="planOne">
-        <h2>Plan 1</h2>
+        <h3>Plan 1</h3>
         <p>That is, assuming the app folk are chosing to include payment plans of some sort.</p>
     </section>
 
@@ -34,12 +45,16 @@
     </section>
 
     <section class="planTwo">
-        <h2>Plan 2</h2>
+        <h3>Plan 2</h3>
         <p>I'm not sure. I guess we'll have to see won't we? Hopefully I won't have to add them last minute.</p>
     </section>
 
     <section class="buttonParentThree">
         <a href="#">I Choose This!</a>
+    </section>
+
+    <section class="moreSucculents">
+        <img src="../photos/annie-spratt-hS46bsAASwQ-unsplash.jpg">
     </section>
 
     <footer>
