--- a/webpage/index.html
+++ b/webpage/index.html
@@ -30,15 +30,17 @@
         <p>"To such an extent does nature delight and abound in variety that among her trees there is not one plant to be found which is exactly like another; and not only among the plants, but among the boughs, the leaves and the fruits, you will not find one which is exactly similar to another."<br> Leonardo da Vinci</p>
     </main>
 
-    <section class="welcome">
-        <h2>WELCOME PLANT LOVERS!</h2>
-        <p>Water. It's the source of life! For anything to live and thrive, it needs water. Our plants are no exception.</p>
-        <p>How many times have you lost a beloved plant due to over and under watering? That's where we come in!</p>
-        <section class="buttonParent">
-            <a href="#">FIND OUT HOW</a>
+    <section class="row">
+        <section class="welcome">
+            <h2>WELCOME PLANT LOVERS!</h2>
+            <p>Water. It's the source of life! For anything to live and thrive, it needs water. Our plants are no exception.</p>
+            <p>How many times have you lost a beloved plant due to over and under watering? That's where we come in!</p>
+            <section class="buttonParent">
+                <a href="about.html">FIND OUT HOW</a>
+            </section>
         </section>
+        <img src="../photos/dex-ezekiel-Fun7Piqpoeo-unsplash.jpg">
     </section>
-
 
 
     <footer>
