--- a/webpage/about.html
+++ b/webpage/about.html
@@ -14,7 +14,7 @@
 <body>
     <section class="TopOfPage">
         <header>
-            <h1>WET MY PLANTS</h1>
+            <h1>PLANT2O</h1>
         </header>
 
         <nav>
@@ -28,7 +28,7 @@
     <section class="appSummary">
         <h2>What is Plant2O?</h2>
         <p>Plant2O is more than a clever play on H2O! It's an app that allows you to set reminders to water your plants! And this is necessary why? Think about it! How many times do you forget to water your plants? Do you have a hard time remembering when the last time you even watered your plant babies? Do you find yourself saying any of the classic Plant Parent phrases: "Didn't I just water you yesterday?" or "How often do I have to water this plant again?"<br>Plant2O takes care of those problems. By setting specific reminders for each plant, never again will you have to bend over backwards trying to remember those watering schedules!</p>
-        <h4>Take away the stress of gardening, enjoy only the fruits of Plant2O's labor!</h4>
+        <h4>Take away the stress of gardening & enjoy only the fruits of PLANT2O's labor!</h4>
     </section>
 
     <section class="succulents">
