finished tablet media query

--- a/webpage/about.html
+++ b/webpage/about.html
@@ -27,7 +27,7 @@
 
     <section class="appSummary">
         <h2>What is Plant2O?</h2>
-        <p>Plant2O is more than a clever play on H2O! It's an app that allows you to set reminders to water your plants! And this is necessary why? Think about it! How many times do you forget to water your plants? Do you have a hard time remembering when the last time you even watered your plant babies? Do you find yourself saying any of the classic Plant Parent phrases: "Didn't I just water you yesterday?" or "How often do I have to water this plant again?"<br>Plant2O takes care of those problems. By setting specific reminders for each plant, never again will you have to bend over backwards trying to remember those watering schedules!</p>
+        <p>Ensuring that all your plants are consistently watered is actually pretty difficult. Water My Plants is an app that helps to solve those problems.<br>With an easy to use interface for creating a plant watering schedule tailored to each individual plant, WaterMyPlants will remind users when it's time to feed that foliage and quench your plants' thirst.</p>
         <h4>Take away the stress of gardening & enjoy only the fruits of PLANT2O's labor!</h4>
     </section>
 
