removed html from folder

--- a/about.html
+++ b/about.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>Document</title>
+    <title>Plant2O</title>
 
-    <link rel="stylesheet" type="text/css" href="../css/index.css">
+    <link rel="stylesheet" type="text/css" href="./css/index.css">
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Playfair+Display:wght@500&family=Spartan&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
 
@@ -32,7 +32,7 @@
     </section>
 
     <section class="succulents">
-        <img src="../photos/annie-spratt-ncQ2sguVlgo-unsplash.jpg">
+        <img src="./photos/annie-spratt-ncQ2sguVlgo-unsplash.jpg">
     </section>
 
     <section class="planOne">
@@ -54,7 +54,7 @@
     </section>
 
     <section class="moreSucculents">
-        <img src="../photos/annie-spratt-hS46bsAASwQ-unsplash.jpg">
+        <img src="./photos/annie-spratt-hS46bsAASwQ-unsplash.jpg">
     </section>
 
     <footer>
