--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     
     <title>PLANT2O</title>
 
-    <link rel="stylesheet" type="text/css" href="../css/index.css">
+    <link rel="stylesheet" type="text/css" href="./css/index.css">
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Playfair+Display:wght@500&family=Spartan&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
 
@@ -39,7 +39,7 @@
                 <a href="about.html">FIND OUT HOW</a>
             </section>
         </section>
-        <img src="../photos/dex-ezekiel-Fun7Piqpoeo-unsplash.jpg">
+        <img src="./photos/dex-ezekiel-Fun7Piqpoeo-unsplash.jpg">
     </section>
 
 
