updated some words on about page

--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
 
     <section class="planOne">
         <h3>Plan 1</h3>
-        <p>That is, assuming the app folk are chosing to include payment plans of some sort.</p>
+        <p>TFiller words make a good filler sentence. I could also use Lorem Ipsum technically, that would've made this easier.</p>
     </section>
 
     <section class="buttonParentTwo">
@@ -46,7 +46,7 @@
 
     <section class="planTwo">
         <h3>Plan 2</h3>
-        <p>I'm not sure. I guess we'll have to see won't we? Hopefully I won't have to add them last minute.</p>
+        <p>Filler words make a good filler sentence. I could also use Lorem Ipsum technically, that would've made this easier.</p>
     </section>
 
     <section class="buttonParentThree">
