updated some words on about page

--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
 
     <section class="planOne">
         <h3>Plan 1</h3>
-        <p>TFiller words make a good filler sentence. I could also use Lorem Ipsum technically, that would've made this easier.</p>
+        <p>Filler words make a good filler sentence. I could also use Lorem Ipsum technically, that would've made this easier.</p>
     </section>
 
     <section class="buttonParentTwo">
