--- a/about.html
+++ b/about.html
@@ -35,22 +35,21 @@
         <img src="./photos/annie-spratt-ncQ2sguVlgo-unsplash.jpg">
     </section>
 
-    <section class="planOne">
-        <h3>Plan 1</h3>
-        <p>Filler words make a good filler sentence. I could also use Lorem Ipsum technically, that would've made this easier.</p>
-    </section>
-
-    <section class="buttonParentTwo">
-        <a href="#">I Choose This!</a>
-    </section>
-
-    <section class="planTwo">
-        <h3>Plan 2</h3>
-        <p>Filler words make a good filler sentence. I could also use Lorem Ipsum technically, that would've made this easier.</p>
-    </section>
-
-    <section class="buttonParentThree">
-        <a href="#">I Choose This!</a>
+    <section class="planRow">
+        <section class="planOne">
+            <h3>Monthly Payment</h3>
+            <p>A small fee of $3 a month to keep those plant babies happy!</p>
+            <div class="buttonParentTwo">
+                <a href="#">I Choose This!</a>
+            </div>
+        </section>
+        <section class="planTwo">
+            <h3>Yearly Payment</h3>
+            <p>Pay at a discounted price for an annual payment of $30! </p>
+            <div class="buttonParentThree">
+                <a href="#">I Choose This!</a>
+            </div>
+        </section>
     </section>
 
     <section class="moreSucculents">
