--- a/about.html
+++ b/about.html
@@ -56,6 +56,58 @@
         <img src="./photos/annie-spratt-hS46bsAASwQ-unsplash.jpg">
     </section>
 
+
+    <section class="intro">
+        <h2>Meet The Team:</h2>
+    </section>
+    <section class="meetTheTeam">
+        <div class="person">
+            <img src="./photos/Screen Shot 2020-04-30 at 11.06.08 AM.png">
+            <h3>Alecsandra Brewer</h3>
+            <p>Marketing: Landing page and "About" section of webpage!</p>
+        </div>
+        <div class="person">
+            <img src="./photos/ESZCHB482-W0123RSLTPH-72d18f2062ba-512.png">
+            <h3>Sean Kramer</h3>
+            <p>React1: Forms layout and styling!</p>
+        </div>
+        <div class="person">
+            <img src="./photos/ESZCHB482-W0138D98M16-9a126ff81f72-512.jpeg">
+            <h3>Dawson Hamm</h3>
+            <p>React 2 Developer: Forms on the Register and Sign Up sections!</p>
+        </div>
+        <div class="person">
+            <img src="./photos/ESZCHB482-W012X6YHVCZ-08a6c8fa3a79-512.jpeg">
+            <h3>Jane Yu</h3>
+            <p>React 2 Developer: Forms on the Register and Sign Up sections!</p>
+        </div>
+        <div class="person">
+            <img src="./photos/ESZCHB482-W012X6T6ETB-5a0f29580e95-512.png">
+            <h3>Ezra Black</h3>
+            <p>Lead iOS Engineer: Lead the creation of the Plant2O app!</p>
+        </div>
+        <div class="person">
+            <img src="./photos/ESZCHB482-W012JQ4SLUB-b9d6423a4ec8-512.jpeg">
+            <h3>Hunter Oppel</h3>
+            <p>iOS Engineer: Team member in the creation of the app!</p>
+        </div>
+        <div class="person">
+            <img src="./photos/ESZCHB482-W012JQ4J2RH-c692d711c1bd-512.png">
+            <h3>Harmony Radley</h3>
+            <p>iOS Engineer: Team member in the creation of the app!</p>
+        </div>
+        <div class="person">
+            <img src="./photos/ESZCHB482-W012JQ3C81H-4a18f12203a6-512.jpeg">
+            <h3>Gunnar Arnporsson</h3>
+            <p>Description</p>
+        </div>
+        <div class="person">
+            <img src="./photos/ESZCHB482-W012H6SCYCV-87ccca8af065-512.png">
+            <h3>David Shestopal</h3>
+            <p>Back-End</p>
+        </div>
+    </section>
+
     <footer>
         <p>Copyright 2020 Plant Love</p>
     </footer>
