--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <p>Water. It's the source of life! For anything to live and thrive, it needs water. Our plants are no exception.</p>
             <p>How many times have you lost a beloved plant due to over and under watering? That's where we come in!</p>
             <section class="buttonParent">
-                <a href="about.html">FIND OUT HOW</a>
+                <a href="about.html">MORE INFO</a>
             </section>
         </section>
         <img src="./photos/dex-ezekiel-Fun7Piqpoeo-unsplash.jpg">
