added project leader to team

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>Plant2O</title>
+    <title>Oxygen</title>
 
     <link rel="stylesheet" type="text/css" href="./css/index.css">
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Playfair+Display:wght@500&family=Spartan&display=swap" rel="stylesheet">
@@ -14,7 +14,7 @@
 <body>
     <section class="TopOfPage">
         <header>
-            <h1>PLANT2O</h1>
+            <h1>Oxygen</h1>
         </header>
 
         <nav>
@@ -26,9 +26,9 @@
     </section>
 
     <section class="appSummary">
-        <h2>What is Plant2O?</h2>
-        <p>Ensuring that all your plants are consistently watered is actually pretty difficult. Water My Plants is an app that helps to solve those problems.<br>With an easy to use interface for creating a plant watering schedule tailored to each individual plant, WaterMyPlants will remind users when it's time to feed that foliage and quench your plants' thirst.</p>
-        <h4>Take away the stress of gardening & enjoy only the fruits of PLANT2O's labor!</h4>
+        <h2>The Oxygen App</h2>
+        <p>Ensuring that all your plants are consistently watered is actually pretty difficult. Oxygen is an app that helps to solve those problems.<br>With an easy to use interface for creating a plant watering schedule tailored to each individual plant, Oxygen will remind users when it's time to feed that foliage and quench your plants' thirst.</p>
+        <h4>Take away the stress of gardening & enjoy only the fruits of Oxygen's labor!</h4>
     </section>
 
     <section class="succulents">
@@ -62,6 +62,11 @@
     </section>
     <section class="meetTheTeam">
         <div class="person">
+            <img src="./photos/md.png">
+            <h3>Michael Daniel</h3>
+            <p>Project Leader!</p>
+        </div>   
+        <div class="person">
             <img src="./photos/Screen Shot 2020-04-30 at 11.06.08 AM.png">
             <h3>Alecsandra Brewer</h3>
             <p>Marketing: Landing page and "About" section of webpage!</p>
@@ -84,7 +89,7 @@
         <div class="person">
             <img src="./photos/ESZCHB482-W012X6T6ETB-5a0f29580e95-512.png">
             <h3>Ezra Black</h3>
-            <p>Lead iOS Engineer: Lead the creation of the Plant2O app!</p>
+            <p>Lead iOS Engineer: Lead the creation of the Oxygen app!</p>
         </div>
         <div class="person">
             <img src="./photos/ESZCHB482-W012JQ4SLUB-b9d6423a4ec8-512.jpeg">
