--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>PLANT2O</title>
+    <title>Oxygen</title>
 
     <link rel="stylesheet" type="text/css" href="./css/index.css">
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Playfair+Display:wght@500&family=Spartan&display=swap" rel="stylesheet">
@@ -14,7 +14,7 @@
 <body>
     <section class="TopOfPage">
         <header>
-            <h1>PLANT2O</h1>
+            <h1>Oxygen</h1>
         </header>
 
         <nav>
