added icons to footer

--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="./css/index.css">
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Playfair+Display:wght@500&family=Spartan&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
 <body>
@@ -87,7 +88,7 @@
             <p>React 2 Developer: Forms on the Register and Sign Up sections!</p>
         </div>
         <div class="person">
-            <img src="./photos/ESZCHB482-W012X6T6ETB-5a0f29580e95-512.png">
+            <img src="./photos/87484487_130780738457135_6477652788015792128_n.jpg">
             <h3>Ezra Black</h3>
             <p>Lead iOS Engineer: Lead the creation of the Oxygen app!</p>
         </div>
@@ -114,7 +115,10 @@
     </section>
 
     <footer>
-        <p>Copyright 2020 Plant Love</p>
+        <p>Copyright 2020 Oxygen</p>
+        <a href="#" class="fa fa-facebook"></a>
+        <a href="#" class="fa fa-twitter"></a>
+        <a href="#" class="fa fa-instagram"></a>
     </footer>
 
 </body>
