linked react to webpage

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <nav>
             <a href="#">HOME</a>
             <a href="about.html">ABOUT</a>
-            <a href="#">REGISTER</a>
-            <a href="#">SIGN IN</a>
+            <a href="https://plant-htwoo-55bp0l5so.now.sh/">REGISTER</a>
+            <a href="https://plant-htwoo-55bp0l5so.now.sh/login">SIGN IN</a>
         </nav>
     </section>
 
