--- a/about.html
+++ b/about.html
@@ -21,8 +21,8 @@
         <nav>
             <a href="index.html">HOME</a>
             <a href="#">ABOUT</a>
-            <a href="#">REGISTER</a>
-            <a href="#">SIGN IN</a>
+            <a href="https://plant-htwoo-55bp0l5so.now.sh/">REGISTER</a>
+            <a href="https://plant-htwoo-55bp0l5so.now.sh/login">SIGN IN</a>
         </nav>
     </section>
 
@@ -41,14 +41,14 @@
             <h3>Monthly Payment</h3>
             <p>A small fee of $3 a month to keep those plant babies happy!</p>
             <div class="buttonParentTwo">
-                <a href="#">I Choose This!</a>
+                <a href="https://plant-htwoo-55bp0l5so.now.sh/">I Choose This!</a>
             </div>
         </section>
         <section class="planTwo">
             <h3>Yearly Payment</h3>
             <p>Pay at a discounted price for an annual payment of $30!</p>
             <div class="buttonParentThree">
-                <a href="#">I Choose This!</a>
+                <a href="https://plant-htwoo-55bp0l5so.now.sh/">I Choose This!</a>
             </div>
         </section>
     </section>
