--- a/about.html
+++ b/about.html
@@ -105,7 +105,7 @@
         <div class="person">
             <img src="./photos/ESZCHB482-W012JQ3C81H-4a18f12203a6-512.jpeg">
             <h3>Gunnar Arnporsson</h3>
-            <p>Description</p>
+            <p>Back-End</p>
         </div>
         <div class="person">
             <img src="./photos/ESZCHB482-W012H6SCYCV-87ccca8af065-512.png">
